Remove cache for put